getting basics of the overview screen working

--- a/TaskBoard/default.html
+++ b/TaskBoard/default.html
@@ -11,9 +11,11 @@
 
     <!-- TaskBoard references -->
     <link href="/css/default.css" rel="stylesheet" />
-    <script src="/js/default.js"></script>
 </head>
 <body>
-    
+    <div id="contenthost" data-win-control="Application.PageControlNavigator" data-win-options="{home: '/pages/overview/index.html'}"></div>
+    <script src="/js/default.js"></script>
+    <script src="js/navigator.js"></script>
+    <script src="js/bindingConverters.js"></script>
 </body>
 </html>
