implementing adding items

--- a/TaskBoard/pages/overview/index.html
+++ b/TaskBoard/pages/overview/index.html
@@ -38,5 +38,9 @@
             <div class="list win-selectionstylefilled" aria-label="Tasks" data-win-control="WinJS.UI.ListView" data-win-options="{ selectionMode: 'none' }"></div>
         </section>
     </div>
+    <div id="appbar" data-win-control="WinJS.UI.AppBar">
+        <!--<button data-win-control="WinJS.UI.AppBarCommand" data-win-options="{id:'add', label:'Add', icon:'add'}" type="button"></button>-->
+    </div>
+
 </body>
 </html>
