dealing with some appbar oddity and filtering tasks on home page

--- a/TaskBoard/pages/overview/index.html
+++ b/TaskBoard/pages/overview/index.html
@@ -39,6 +39,9 @@
         </section>
     </div>
     <div id="appbar" data-win-control="WinJS.UI.AppBar">
+        <button id="addCommand" data-win-control="WinJS.UI.AppBarCommand"></button>
+        <button id="deleteCommand" data-win-control="WinJS.UI.AppBarCommand" data-win-options="{section: 'selection'}"></button>
+        <button id="completeCommand" data-win-control="WinJS.UI.AppBarCommand" data-win-options="{section: 'selection'}"></button>
     </div>
 
 </body>
