live tile starting

--- a/TaskBoard/pages/overview/index.html
+++ b/TaskBoard/pages/overview/index.html
@@ -42,6 +42,7 @@
         <button id="addCommand" data-win-control="WinJS.UI.AppBarCommand"></button>
         <button id="deleteCommand" data-win-control="WinJS.UI.AppBarCommand" data-win-options="{section: 'selection'}"></button>
         <button id="completeCommand" data-win-control="WinJS.UI.AppBarCommand" data-win-options="{section: 'selection'}"></button>
+        <button id="pinCommand" data-win-control="WinJS.UI.AppBarCommand" data-win-options="{section: 'selection'}"></button>
     </div>
 
 </body>
