--- a/TaskBoard/default.html
+++ b/TaskBoard/default.html
@@ -14,8 +14,14 @@
 </head>
 <body>
     <div id="contenthost" data-win-control="Application.PageControlNavigator" data-win-options="{home: '/pages/overview/index.html'}"></div>
+    <script src="/js/wamd.js"></script>
+    <script src="js/winjs-require/app.js"></script>
     <script src="/js/default.js"></script>
     <script src="js/navigator.js"></script>
     <script src="js/bindingConverters.js"></script>
+    
+    <script>
+        require.require('/js/default');
+    </script>
 </body>
 </html>
