starting to port to modules. WinJS to CommonJS converter defined

--- a/TaskBoard/default.html
+++ b/TaskBoard/default.html
@@ -21,7 +21,7 @@
     <script src="js/bindingConverters.js"></script>
     
     <script>
-        require.require('/js/default');
+        require.require('/js/default.js');
     </script>
 </body>
 </html>
