--- a/TaskBoard/default.html
+++ b/TaskBoard/default.html
@@ -8,18 +8,26 @@
     <link href="//Microsoft.WinJS.1.0/css/ui-dark.css" rel="stylesheet" />
     <script src="//Microsoft.WinJS.1.0/js/base.js"></script>
     <script src="//Microsoft.WinJS.1.0/js/ui.js"></script>
+    <link href="pages/overview/index.css" rel="stylesheet" />
 
     <!-- TaskBoard references -->
     <link href="/css/default.css" rel="stylesheet" />
 </head>
 <body>
-    <div id="contenthost" data-win-control="Application.PageControlNavigator" data-win-options="{home: '/pages/overview/index.html'}"></div>
-    <script src="/js/wamd.js"></script>
-    <script src="js/winjs-require/app.js"></script>
-    <script src="/js/default.js"></script>
+    <div id="contenthost"></div>
+    <script src="js/wamd.js"></script>
+    <script src="Scripts/jquery-1.8.3.js"></script>
+    <script src="Scripts/handlebars.js"></script>
+    <script src="Scripts/sammy-0.7.2.js"></script>
+    <script src="Scripts/sammy-plugins/sammy.winjs.js"></script>
+    <script src="js/wrappers.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/default.js"></script>
     <script src="js/navigator.js"></script>
     <script src="js/bindingConverters.js"></script>
-    
+    <script src="pages/overview/index.js"></script>
+    <script src="pages/overview/item.js"></script>
+    <script src="pages/create/create.js"></script>
     <script>
         require.require('/js/default.js');
     </script>
