Getting create routing working

--- a/TaskBoard/default.html
+++ b/TaskBoard/default.html
@@ -8,10 +8,11 @@
     <link href="//Microsoft.WinJS.1.0/css/ui-dark.css" rel="stylesheet" />
     <script src="//Microsoft.WinJS.1.0/js/base.js"></script>
     <script src="//Microsoft.WinJS.1.0/js/ui.js"></script>
-    <link href="pages/overview/index.css" rel="stylesheet" />
 
     <!-- TaskBoard references -->
     <link href="/css/default.css" rel="stylesheet" />
+    <link href="pages/overview/index.css" rel="stylesheet" />
+    <link href="pages/create/create.css" rel="stylesheet" />
 </head>
 <body>
     <div id="contenthost"></div>
