starting work on vm layer

--- a/TaskBoard/pages/overview/item.html
+++ b/TaskBoard/pages/overview/item.html
@@ -10,6 +10,7 @@
     <script src="//Microsoft.WinJS.1.0/js/ui.js"></script>
 
     <link href="item.css" rel="stylesheet" />
+    <script src="item.js"></script>
 </head>
 <body>
     <div class="item fragment">
