--- a/TaskBoard/default.html
+++ b/TaskBoard/default.html
@@ -24,7 +24,7 @@
     <script src="js/wrappers.js"></script>
     <script src="js/app.js"></script>
     <script src="js/default.js"></script>
-    <script src="js/navigator.js"></script>
+    <script src="js/ui/Presenter.js"></script>
     <script src="js/bindingConverters.js"></script>
     <script src="pages/overview/index.js"></script>
     <script src="pages/overview/item.js"></script>
