--- a/TaskBoard/pages/overview/index.html
+++ b/TaskBoard/pages/overview/index.html
@@ -10,6 +10,7 @@
     <script src="//Microsoft.WinJS.1.0/js/ui.js"></script>
 
     <link href="index.css" rel="stylesheet" />
+    <script src="index.js"></script>
 </head>
 <body>
     <div class="headertemplate" data-win-control="WinJS.Binding.Template">
