Moving appbar into its own partial

--- a/TaskBoard/default.html
+++ b/TaskBoard/default.html
@@ -27,7 +27,8 @@
     <script src="js/ui/Presenter.js"></script>
     <script src="js/bindingConverters.js"></script>
     <script src="pages/overview/index.js"></script>
-    <script src="pages/overview/item.js"></script>
+    <script src="pages/overview/appbar.js"></script>
+    <script src="pages/item/item.js"></script>
     <script src="pages/create/create.js"></script>
     <script>
         require.require('/js/default.js');
