--- a/TaskBoard/default.html
+++ b/TaskBoard/default.html
@@ -21,6 +21,7 @@
     <script src="Scripts/handlebars.js"></script>
     <script src="Scripts/sammy-0.7.2.js"></script>
     <script src="Scripts/sammy-plugins/sammy.winjs.js"></script>
+    <script src="Scripts/db.js"></script>
     <script src="js/wrappers.js"></script>
     <script src="js/app.js"></script>
     <script src="js/default.js"></script>
